[project]
name = "thunderhead"
version = "0.1.0"
description = "Introducing Thunderhead, your friendly AI government overlord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mesa[rec]>=3.5.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "seaborn>=0.13.2",
]
